DV versio_beta pulir

--- a/capdany/index.html
+++ b/capdany/index.html
@@ -61,7 +61,7 @@
           <div class="marti-base" style="display:none;" id="text2">
             <br>
             <p style="text-align:left;" id="p2"></p>
-            <p> Una vegada definit el pla, tocava desplaçar-se cap a la festa. Ni carroça ni limusina, la noia va utilitzar el transport públic, concient del forat creixent a la capa d'ozó. Quan va arribar, la festa ja havia començat, però va seguir el pla i es va endinsar entre la multitud.</p>
+            <p> Una vegada definit el pla, tocava desplaçar-se cap a la festa. Ni carrosa ni limusina, la noia va utilitzar el transport públic, concient del forat creixent a la capa d'ozó. Quan va arribar, la festa ja havia començat, però va seguir el pla i es va endinsar entre la multiud.</p>
             <br>  
             <h3> Quin va ser el moment més remarcable de la festa? </h3>
             <hr>
@@ -154,7 +154,7 @@
         });
         $(document).on('click', '#boto3', function (event) {
             event.preventDefault();
-            if($("#boto3").prop("disabled") == false){
+            if($("#boto2").prop("disabled") == false){
                 $( '#i1' ).val("ANY");
                 $('#boto2').prop('disabled', true);
                 $('#boto1').prop('disabled', true);
@@ -193,7 +193,7 @@
         });
         $(document).on('click', '#boto23', function (event) {
             event.preventDefault();
-            if($("#boto23").prop("disabled") == false){
+            if($("#boto22").prop("disabled") == false){
                 $( '#i2' ).val("AVENTURA");
                 $('#boto22').prop('disabled', true);
                 $('#boto21').prop('disabled', true);
@@ -241,7 +241,7 @@
         });
         $(document).on('click', '#boto43', function (event) {
             event.preventDefault();
-            if($("#boto43").prop("disabled") == false){
+            if($("#boto41").prop("disabled") == false){
                 $( '#i4' ).val("NIFUNIFA");
                 $('#boto42').prop('disabled', true);
                 $('#boto41').prop('disabled', true);
@@ -280,7 +280,7 @@
         });
         $(document).on('click', '#boto53', function (event) {
             event.preventDefault();
-            if($("#boto53").prop("disabled") == false){
+            if($("#boto51").prop("disabled") == false){
                 $( '#i5' ).val("PARLAR");
                 $('#boto52').prop('disabled', true);
                 $('#boto51').prop('disabled', true);
