--- a/html/blog.html
+++ b/html/blog.html
@@ -58,6 +58,31 @@
       <div class="row">
         <div class="col-sm-8 blog-main">
           <div class="marti-base">
+            <h1 class="blog-post-title">Canvi d'any</h1>
+            <p class="blog-post-meta">12 de Gener del 2017, <a href="about.html">Martí</a></p>
+            
+            <p> El 2016 s'ha acabat. A continuació faig una petita reflexió del que m'ha aportat aquest any.</p>
+            <br>
+            <h2> 2016: </h2>
+            <hr>
+            <p>Durant el 2016, he acabat amb èxit el primer curs del grau de física. Ara per ara és la prioritat número 1 i se li ha de dedicar temps i esforç. He descobert que una carrera de física implica endinsar-se en la matèria i comprendre-la des dels fonaments. També he descobert que hi ha un lloc màgic anomenat biblioteca on s'hi pot estudiar relativament millor que a casa, encara que acostuma a estar plena de gom a gom. Aquest any he vist clar que s'haurà de suar molt per arribar a ser físic.</p>
+            <br>
+            <p>Durant el 2016, he treballat en molts projectes de 3D per a persones molt diverses. Feines d'animació de models per FICOSA, classes del software lliure i gratuït <em>Blender</em> a la UAB, un vídeo demostratiu de l'Alça: un producte dissenyat per la Sala Puigverd, modelat i renderitzat d'edificis per SR GrupSis Associats, <a href="noetperdis.com"></a> i un model de pesa portàtil per un emprenedor del camp del Fitness. En general, ha estat un any ple de noves experiències, tracte amb els clients, ampliar fronteres i generalitzar el tipus de servei que ofereixo.</p>
+            <br>
+            <p> Durant el 2016, he ampliat les meves habilitats amb Python, per tal de crear petits mòduls importables. He continuat treballant en l'ecosistema Jupyter Norebook i he creat una Neural Network i un simulador de trànsit, tot i que aquest últim necessita una revisió i traspàs a C. He après a fer aplicacions de mòbil amb Android Studio, cosa que necessitat temps i m'he retrobat amb la programació en Java. Malauradament no vaig ser seleccionat pel Google Summer of Code del 2016. M'he quedat amb les ganes de fer projectes de programació més ambiciosos o amb comunitat. Aquest any també he après molta programació web: HTML, css i javascript.</p>
+            <br>
+            <p> Finalment, durant el 2016, he creat aquesta pàgina web, que és un lloc espectacular per penjar els projectes que vaig completant, per poder-ne tenir constància en un futur.</p>
+            <br>
+            <a href="../nadal/mobil.html"><img class="imatge" src="/imatges/nadalthumb.png"></a><br>
+              Postal de nadal interactiva dedicada als meus amics.
+            <br>
+            <br>
+            <h3>2017:</h3>
+            <hr>
+            <p>Aquest any que comença està dedicat a mantenir el nivell d'interès i aprenentatge que porto mantenint durant tants anys i, si pot ser, augmentar-lo. Si una cosa està clara, és que continuaré dedicant temps al que m'agrada: la programació, el disseny 3D i la física.</p>
+          </div><!-- /.blog-post -->
+        <hr>
+          <div class="marti-base">
             <h1 class="blog-post-title">New project: Contibuting to create maps with 3D elements!</h1>
             <p class="blog-post-meta">October 17, 2016 by <a href="about.html">Martí</a></p>
             
@@ -67,7 +92,6 @@
             <hr>
             <p>The majority of elements that I had to create were existing buildings, so I had to do a bit of research to find the appropiate reference imatges. The modelling and texturing of those buildings was the hardest part of the project, as they had to look like the real ones.</p>
             <br>
-            <p> </p>
             <img class="imatge" src="/imatges/mapes/stamerce.png"><br>
               3D model of a church, Santa Merce (Calldetenes).
             <br>
