--- a/html/physics.html
+++ b/html/physics.html
@@ -148,7 +148,7 @@ def colTransformation(V1, V2, angle):
                         Here you can see the code used to simulate the box with balls:
                     </p>
                     <div class="card-well">
-                        <iframe src="http://nbviewer.jupyter.org/github/itsmgo/daily-practices/blob/master/Notebooks/CollisionsWall.ipynb" width="100%" height="700px" frameborder=0>Not supported in your browser</iframe>
+                        <iframe src="https://nbviewer.jupyter.org/github/itsmgo/daily-practices/blob/master/Notebooks/CollisionsWall.ipynb" width="100%" height="600px" frameborder=0>Not supported in your browser</iframe>
                     </div>
                     
                 
