--- a/html/coding.html
+++ b/html/coding.html
@@ -76,7 +76,7 @@
                     <br>
                     <br>
                     <div class="card-well">
-                        <iframe src="http://nbviewer.jupyter.org/github/itsmgo/daily-practices/blob/master/Notebooks/GameOfLife.ipynb" width="100%" height="700px" frameborder=0>Not supported in your browser</iframe>
+                        <iframe src="https://nbviewer.jupyter.org/github/itsmgo/daily-practices/blob/master/Notebooks/GameOfLife.ipynb" width="100%" height="700px" frameborder=0>Not supported in your browser</iframe>
                     </div>
                     <br>
                     And here you can download the Python app. You can pass 4 arguments to the program, X size, Y size, fife factor (between 0 and 1), and simulation velocity (miliseconds to refresh each frame).
