--- a/renderSchulze/index.html
+++ b/renderSchulze/index.html
@@ -1,12 +1,21 @@
-<link href="renders.css" rel="stylesheet">
+<style>
+body {
+  background-color: white;
+    font-family: sans-serif;
+    align-content: center;
+}
+h1 {
+  background-color: lightblue;
+}
+</style>
 
 <html lang="en">
+    <link href="marti-blog.css" rel="stylesheet">
     <body>
     <div id="main" >
         <div id = "foo" class="centre">
             <script type="text/javascript" src=manager.js></script>
             <script>main(-1)</script>
-            
         </div>
     </div>
     </body>
