render schulze classification vBeta

--- a/renderSchulze/index.html
+++ b/renderSchulze/index.html
@@ -1,21 +1,16 @@
-<style>
-body {
-  background-color: white;
-    font-family: sans-serif;
-    align-content: center;
-}
-h1 {
-  background-color: lightblue;
-}
-</style>
-
+<link href="renders.css" rel="stylesheet">
 <html lang="en">
-    <link href="marti-blog.css" rel="stylesheet">
     <body>
-    <div id="main" >
-        <div id = "foo" class="centre">
-            <script type="text/javascript" src=manager.js></script>
-            <script>main(-1)</script>
+        <div id="main" >
+            <div id = "a" class="centre">
+                <script type="text/javascript" src=manager.js></script>
+                <script>main(-1)</script>                     
+            </div>
+            <div id = "b" class="centre">
+            </div>
+            <div id = "c" class="centre">
+            </div>
         </div>
-    </div>
     </body>
+</html>
+
