--- a/renderSchulze/index.html
+++ b/renderSchulze/index.html
@@ -1,4 +1,7 @@
 <link href="renders.css" rel="stylesheet">
+<head>
+<title>Rate my Renders</title>
+</head>
 <html lang="en">
     <body>
         <div id="main" >
