--- a/sliderBF2020/index.html
+++ b/sliderBF2020/index.html
@@ -18,19 +18,19 @@ body { background-color: #fff; color: #000; padding: 0; margin: 0; }
 <div class="ism-slider" data-transition_type="fade" data-radio_type="thumbnail" id="my-slider">
   <ol>
     <li>
-      <img src="ism/image/slides/_u/1610030997543_999176.png">
+      <img src="ism/image/slides/_u/1610030997543_999176.jpg">
     </li>
     <li>
       <img src="ism/image/slides/_u/1610031190204_695905.jpg">
     </li>
     <li>
-      <img src="ism/image/slides/_u/1610030993496_86510.png">
+      <img src="ism/image/slides/_u/1610030993496_86510.jpg">
     </li>
     <li>
       <img src="ism/image/slides/_u/1610031190197_622093.jpg">
     </li>
     <li>
-      <img src="ism/image/slides/_u/1610030991338_460103.png">
+      <img src="ism/image/slides/_u/1610030991338_460103.jpg">
     </li>
   </ol>
 </div>
