added thumbnais and reduced max width

--- a/html/cg.html
+++ b/html/cg.html
@@ -28,13 +28,10 @@
   <h1 style="margin-bottom: 30px;">MARTI GIMENO PORTFOLIO</h1>
 
   <div class="video-split">
-    <div style="margin-left: 3%; margin-right: 3%;">
+    <div style="margin-left: 15%; margin-right: 15%;">
       <div style="max-width: 1348px; margin: auto;">
         <div class="embed-responsive embed-responsive-16by9" style="border-radius: 5px; margin: auto;">
-          <video class="embed-responsive-item" controls>
-            <source src="../video/UK_BF_Ad.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/u3WYM-5YylE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="margin:0 auto;"></iframe>
         </div>
       </div>
     </div>
@@ -69,108 +66,108 @@
 
             <div class="col-sm-12 col-md-4">
                 <a class="lightbox" href="../imatges/renders/11_Platja.png">
-                  <img src="../imatges/renders/11_Platja.png">
+                  <img src="../imatges/renders/11_Platja.jpg">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
               <a class="lightbox" href="../imatges/renders/9_Production.png">
-                <img src="../imatges/renders/9_Production.png">
+                <img src="../imatges/renders/9_Production.jpg">
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
                 <a class="lightbox" href="../imatges/renders/1_Tanatori.png">
-                  <img src="../imatges/renders/1_Tanatori.png">
+                  <img src="../imatges/renders/1_Tanatori.jpg">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
                 <a class="lightbox" href="../imatges/renders/18_Parquing.png">
-                  <img src="../imatges/renders/18_Parquing.png">
+                  <img src="../imatges/renders/18_Parquing.jpg">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
                 <a class="lightbox" href="../imatges/renders/2_Tennis.png">
-                  <img src="../imatges/renders/2_Tennis.png">
+                  <img src="../imatges/renders/2_Tennis.jpg">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
                 <a class="lightbox" href="../imatges/renders/4_Paret.png">
-                  <img src="../imatges/renders/4_Paret.png">
+                  <img src="../imatges/renders/4_Paret.jpg">
                 </a>
             </div>
 
             <div class="col-sm-12 col-md-8">
               <a class="lightbox" href="../imatges/renders/20_Citric.jpg">
-                <img src="../imatges/renders/20_Citric.jpg">
+                <img src="../imatges/renders/20_Citric_thumb.jpg">
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
                 <a class="lightbox" href="../imatges/renders/8_Supermercat.png">
-                  <img src="../imatges/renders/8_Supermercat.png">
+                  <img src="../imatges/renders/8_Supermercat.jpg">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
                 <a class="lightbox" href="../imatges/renders/17_Abstract.png">
-                  <img src="../imatges/renders/17_Abstract.png">
+                  <img src="../imatges/renders/17_Abstract.jpg">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
               <a class="lightbox" href="../imatges/renders/3_Nocturn.png">
-                <img src="../imatges/renders/3_Nocturn.png">
+                <img src="../imatges/renders/3_Nocturn.jpg">
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
                 <a class="lightbox" href="../imatges/renders/6_Public.png">
-                  <img src="../imatges/renders/6_Public.png">
+                  <img src="../imatges/renders/6_Public.jpg">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
                 <a class="lightbox" href="../imatges/renders/7_Mediterrani.png">
-                  <img src="../imatges/renders/7_Mediterrani.png">
+                  <img src="../imatges/renders/7_Mediterrani.jpg">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
               <a class="lightbox" href="../imatges/renders/21_Discount.png">
-                <img src="../imatges/renders/21_Discount.png">
+                <img src="../imatges/renders/21_Discount.jpg">
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
                 <a class="lightbox" href="../imatges/renders/12_Wireframe.png">
-                  <img src="../imatges/renders/12_Wireframe.png">
+                  <img src="../imatges/renders/12_Wireframe.jpg">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
                 <a class="lightbox" href="../imatges/renders/24_Arcs.png">
-                  <img src="../imatges/renders/24_Arcs.png">
+                  <img src="../imatges/renders/24_Arcs.jpg">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
               <a class="lightbox" href="../imatges/renders/5_Planta.png">
-                <img src="../imatges/renders/5_Planta.png">
+                <img src="../imatges/renders/5_Planta.jpg">
               </a>
           </div> 
           <div class="col-sm-6 col-md-4">
               <a class="lightbox" href="../imatges/renders/19_Concessionari.jpg">
-                <img src="../imatges/renders/19_Concessionari.jpg">
+                <img src="../imatges/renders/19_Concessionari_thumb.jpg">
               </a>
           </div>
           <div class="col-sm-6 col-md-4">
             <a class="lightbox" href="../imatges/renders/22_Carpaint.png">
-              <img src="../imatges/renders/22_Carpaint.png">
+              <img src="../imatges/renders/22_Carpaint.jpg">
             </a>
           </div>
           <div class="col-sm-12 col-md-8">
             <a class="lightbox" href="../imatges/renders/10_Nordic.png">
-              <img src="../imatges/renders/10_Nordic.png">
+              <img src="../imatges/renders/10_Nordic.jpg">
             </a>
           </div>
           <div class="col-sm-6 col-md-4">
             <a class="lightbox" href="../imatges/renders/23_Night.png">
-              <img src="../imatges/renders/23_Night.png">
+              <img src="../imatges/renders/23_Night.jpg">
             </a>
           </div>
           <div class="col-sm-6 col-md-4">
             <a class="lightbox" href="../imatges/renders/13_Orange.png">
-              <img src="../imatges/renders/13_Orange.png">
+              <img src="../imatges/renders/13_Orange.jpg">
             </a>
           </div>
         </div>
