final portfolio update

--- a/html/cg.html
+++ b/html/cg.html
@@ -85,7 +85,7 @@
       <div style="max-width: 1348px; margin: auto;">
         <div class="embed-responsive embed-responsive-16by9" style="border-radius: 5px; margin: auto;">
           <video class="embed-responsive-item" controls>
-            <source src="../imatges/SUPERNOVA_TEASER_vDef.mp4" type="video/mp4">
+            <source src="../imatges/Reel2020_WEB.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video> 
         </div>
@@ -205,13 +205,13 @@
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="../imatges/renders/HD/2_Tennis.jpg">
-                  <img src="../imatges/renders/2_Tennis.jpg">
+                <a class="lightbox" href="../imatges/renders/HD/20_Citric.jpg">
+                  <img src="../imatges/renders/20_Citric_thumb.jpg">
                 </a>
             </div> 
             <div class="col-sm-12 col-md-8">
-              <a class="lightbox" href="../imatges/renders/20_Citric.jpg">
-                <img src="../imatges/renders/20_Citric_thumb.jpg">
+              <a class="lightbox" href="../imatges/renders/HD/29_Cabin.jpg">
+                <img src="../imatges/renders/29_Cabin.jpg">
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
