--- a/html/valerdat_test.html
+++ b/html/valerdat_test.html
@@ -61,8 +61,18 @@
       .text {
         padding: 15vw;
         padding-top: 0px;
+        padding-bottom: 10vw;
         text-align: left;
         font-size: 40px;
+        font-weight: 700;
+        line-height: 0px;
+      }
+
+      .header {
+        padding: 5vw;
+        padding-bottom: 3vw;
+        text-align: left;
+        font-size: 60px;
         font-weight: 700;
         line-height: 0px;
       }
@@ -142,15 +152,15 @@
 
   <body>
     <div class="container">
+      <h2 class="header">Valerdat</h2>
+
       <br />
       <p class="text small">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
         commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
+        velit esse cillum dolore eu fugiat nulla pariatur.
       </p>
       <div class="segments segment-1">
         <h2 class="text absolute" id="t1">Reality is complex.</h2>
@@ -165,6 +175,23 @@
           ... and analyse it to get insights.
         </h2>
       </div>
+      <hr>
+      <p class="text small">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur.
+      </p>
+      <hr>
+      <p class="text small">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur.
+      </p>
+      <br />
     </div>
   </body>
 </html>
