upload ako 3d models

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@ html, body, #canvas {
 
 body {
 	color: white;
-	background-color: black;
+	background-color: white;
 	overflow: hidden;
 	touch-action: none;
 }
@@ -49,6 +49,7 @@ body {
 #status-splash {
 	min-width: 100%;
 	margin: auto;
+	opacity: 0.2;
 }
 
 #status-progress, #status-notice {
